--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^22.10.2",
     "eslint": "^9.17.0",
     "hot-hook": "^0.4.0",
+    "openapi-types": "^7.0.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
     "ts-node-maintained": "^10.9.4",
@@ -65,17 +66,6 @@
       "./app/controllers/**/*.ts",
       "./app/middleware/*.ts"
     ]
-  },
-  "overrides": {
-    "strtok3": "8.0.1"
-  },
-  "resolutions": {
-    "strtok3": "8.0.1"
-  },
-  "pnpm": {
-    "overrides": {
-      "strtok3": "8.0.1"
-    }
   },
   "prettier": "@adonisjs/prettier-config"
 }
