--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -13,5 +15,11 @@
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.1.0",
+    "@nuxt/eslint": "^1.0.0",
+    "eslint": "^9.19.0",
+    "typescript": "~5.7"
   }
 }
