chore: add lint:fix script to root and backend package

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "workspaces": ["apps/*"],
   "scripts": {
+    "lint:fix": "pnpm -r lint --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
