--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -30,7 +30,8 @@
     "#database/*": "./database/*.js",
     "#start/*": "./start/*.js",
     "#tests/*": "./tests/*.js",
-    "#config/*": "./config/*.js"
+    "#config/*": "./config/*.js",
+    "#factories/*": "./database/factories/*.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
