--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,35 @@
+# Dependencies
 node_modules
+
+# Build outputs
+dist
+build
+
+# Editor directories
+.idea
+.vscode
+*.sublime-*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Testing
+coverage
+
+# Temporary files
+*.tmp
+*.temp
+.cache
