--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -8,10 +8,14 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "tsx src/test.ts"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
-    "typescript": "~5.3",
-    "@types/node": "^20.11.0"
+    "@types/jsdom": "^21.1.6",
+    "tsx": "^4.7.0"
   }
 } 
