feat(barcode): add barcode scanning functionality
- Integrate Capacitor Barcode Scanner plugin
- Add barcode scanning page and navigation button
- Update Android configuration to support barcode scanning
- Increase minimum SDK version to support modern features
- Add Azure Maven repository for potential dependencies

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^7.0.1",
+    "@capacitor/barcode-scanner": "^2.0.0",
     "@capacitor/core": "^7.0.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
