refactor(scraper): update module resolution and import paths
- Change module resolution from Bundler to Node
- Add .js extensions to import paths
- Update package.json with exports field
- Modify build script to remove dist directory before compilation

--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -5,8 +5,14 @@
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "dev": "tsc --watch",
     "typecheck": "tsc --noEmit",
     "test": "tsx src/test.ts"
@@ -18,4 +24,4 @@
     "@types/jsdom": "^21.1.6",
     "tsx": "^4.7.0"
   }
-} 
+}
