--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,6 +25,7 @@
     "@antfu/eslint-config": "^4.1.0",
     "@capacitor/cli": "^7.0.1",
     "@nuxt/eslint": "^1.0.0",
+    "@pinia/nuxt": "^0.9.0",
     "eslint": "^9.19.0",
     "typescript": "~5.7"
   }
