feat(frontend): add bundle size analysis and tracking script
- Create `save-bundle-analysis.js` script to save Nuxt bundle analysis reports
- Add new npm script `analyze-bundle` to generate and save bundle analysis
- Configure Nuxt build to enable bundle size analysis
- Save client and Nitro bundle analysis reports with timestamped directories
- Update TODO.md to mark bundle size tracking as completed

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "eslint . --fix",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "analyze-bundle": "nuxt generate && node scripts/save-bundle-analysis.js"
   },
   "dependencies": {
     "@capacitor/android": "^7.0.1",
