--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,18 +20,21 @@
     "@capacitor/core": "^7.0.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vuetify": "^3.7.12"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.1.0",
     "@capacitor/cli": "^7.0.1",
     "@iconify-json/clarity": "^1.2.2",
+    "@mdi/font": "^7.4.47",
     "@nuxt/eslint": "^1.0.0",
     "@pinia/nuxt": "^0.9.0",
     "@unocss/nuxt": "^65.5.0",
     "@unocss/preset-icons": "^65.5.0",
     "eslint": "^9.19.0",
     "typescript": "~5.7",
-    "unocss": "^65.5.0"
+    "unocss": "^65.5.0",
+    "vite-plugin-vuetify": "^2.1.0"
   }
 }
