feat(frontend): Add form validation with Zod and improve auth page accessibility
- Integrate Zod for client-side form validation
- Create validation schemas for login and registration
- Add comprehensive error handling for form submissions
- Enhance auth page accessibility with ARIA attributes
- Implement useAuthForm composable for error management
- Update input fields with error messages

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,7 +22,8 @@
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest",
-    "vuetify": "^3.7.12"
+    "vuetify": "^3.7.12",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.1.0",
