--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -29,6 +29,7 @@
     "@antfu/eslint-config": "^4.1.0",
     "@capacitor/cli": "^7.0.1",
     "@iconify-json/clarity": "^1.2.2",
+    "@iconify-json/svg-spinners": "^1.2.2",
     "@mdi/font": "^7.4.47",
     "@nuxt/eslint": "^1.0.0",
     "@pinia/nuxt": "^0.9.0",
