--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
     "@capacitor/barcode-scanner": "^2.0.0",
     "@capacitor/core": "^7.0.1",
     "@unocss/reset": "^65.5.0",
+    "@vueuse/nuxt": "12.7.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest",
@@ -29,12 +30,14 @@
     "@antfu/eslint-config": "^4.1.0",
     "@capacitor/cli": "^7.0.1",
     "@iconify-json/clarity": "^1.2.2",
+    "@iconify-json/material-symbols": "^1.2.14",
     "@iconify-json/svg-spinners": "^1.2.2",
     "@mdi/font": "^7.4.47",
     "@nuxt/eslint": "^1.0.0",
     "@pinia/nuxt": "^0.9.0",
     "@unocss/nuxt": "^65.5.0",
     "@unocss/preset-icons": "^65.5.0",
+    "@vueuse/core": "^12.7.0",
     "eslint": "^9.19.0",
     "typescript": "~5.7",
     "unocss": "^65.5.0",
