--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,6 +18,7 @@
     "@capacitor/android": "^7.0.1",
     "@capacitor/barcode-scanner": "^2.0.0",
     "@capacitor/core": "^7.0.1",
+    "@capacitor/haptics": "^7.0.0",
     "@unocss/reset": "^65.5.0",
     "@vueuse/nuxt": "12.7.0",
     "nuxt": "^3.15.4",
