--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -24,7 +24,6 @@
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest",
-    "vuetify": "^3.7.12",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -41,7 +40,6 @@
     "@vueuse/core": "^12.7.0",
     "eslint": "^9.19.0",
     "typescript": "~5.7",
-    "unocss": "^65.5.0",
-    "vite-plugin-vuetify": "^2.1.0"
+    "unocss": "^65.5.0"
   }
 }
