--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^7.0.1",
+    "@capacitor/app": "^7.0.0",
     "@capacitor/barcode-scanner": "^2.0.0",
     "@capacitor/core": "^7.0.1",
     "@capacitor/haptics": "^7.0.0",
